I fixed the white gap problem :p

--- a/index.css
+++ b/index.css
@@ -2,13 +2,17 @@
     overflow-x: hidden;
 
 }
-
 html {
     font-family: sans-serif;
     font-size: 15px;
 
 }
-
+html,body{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 h3 {
     color: #8b0000;
 }
@@ -37,10 +41,11 @@ a {
 }
 
 .head1 {
-    background-color: red;
+    background-color: red; margin: 0px;
     padding: 18px;
     color: white;
     font-size: 12px;
+    margin: 0px;
 }
 
 h2 {
